<resources>
    <string name="app_name">База данных фильмов</string>
    <string name="title_login">Логин</string>
    <string name="title">База данных фильмов</string>
    <string name="title_password">Пароль</string>
    <string name="remember_me">Запомнить</string>
    <string name="title_namemovie">Введите название фильма:</string>
    <string name="title_year">Год:</string>
    <string name="title_name">Название:</string>
    <string name="title_released">Дата релиза:</string>
    <string name="title_language">Язык:</string>
    <string name="title_type">Тип:</string>
    <string name="textbutton_search">Найти</string>
    <string name="save_movie">Сохранить</string>
    <string name="error_emptyfields">Не все поля заполнены</string>
    <string name="noaccount_register">Зарегистрироваться</string>
    <string name="title_main">Необходимо войти в аккаунт:</string>
    <string name="title_repeatpassword">Повторите пароль</string>
    <string name="error_passwords">Пароли не совпадают</string>
    <string name="add_user">Вы успешно зарегистрирвоались</string>
    <string name="del_all">Удалить всё</string>
    <string name="del_item">Удалить</string>
    <string name="add_item">Добавить</string>
    <string name="edit_item">Редактировать</string>
    <string name="title_actors">Актёры:</string>
    <string name="plot">Сюжет:</string>
    <string name="next_page_bd">Перейти в базу данных</string>
    <string name="title_plot">Сюжет:</string>
    <string name="error_auth">Неправильный логин или пароль</string>
    <string name="title_deleteitem">Введите название</string>
    <string name="error_emptyfield">Поле пустое</string>
    <string name="acc_delete">Успешное удаление</string>
    <string name="error_delete">Ошибка удаления</string>
    <string name="title_edititem">Введите изменения</string>
    <string name="error_checkUser">Пользователь с таким логином уже есть</string>
    <string name="save">Сохранить</string>
    <string name="acc_edit">Данные успешно обновлены</string>
    <string name="error_edit">Ошибка обновления данных</string>
</resources>