<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@drawable/icon_1">
    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/title_login"
        android:textSize="18dp"
        android:textColor="@color/gray"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp">
    </TextView>
    <EditText
        android:id="@+id/edittext_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
        android:paddingLeft="10dp"
        android:background="@drawable/background_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/title_password"
        android:textSize="18dp"
        android:textColor="@color/gray"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
    </TextView>
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:inputType="textPassword"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890.,"
        android:numeric="integer"
        android:layout_height="40dp"
        android:background="@drawable/background_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
    </EditText>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="121dp"
        android:layout_height="40dp"
        android:layout_marginLeft="260dp"
        android:text="@string/remember_me"
        android:textColor="@color/gray"
        android:textSize="15dp"></CheckBox>

    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="18dp"
        android:onClick="next"
        android:textColor="@color/blue"
        android:textAllCaps="false"
        android:background="@drawable/background_view"
        android:text="Далее">
    </Button>
    <Button
        android:id="@+id/button_registration"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="18dp"
        android:onClick="registration"
        android:layout_marginTop="10dp"
        android:textColor="@color/blue"
        android:textAllCaps="false"
        android:background="@drawable/background_view"
        android:text="@string/noaccount_register">
    </Button>
</LinearLayout>