<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".EditPage">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/icon_1">
    </ImageView>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/gray"
        android:textSize="20dp"></TextView>
    <TextView
        android:id="@+id/text_year"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="10dp"
        android:text="@string/title_year"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/gray"
        android:textSize="20dp"></TextView>
    <EditText
        android:id="@+id/edittext_year"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ123456789"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:background="@drawable/background_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
    </EditText>
    <TextView
        android:id="@+id/text_type"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="10dp"
        android:text="@string/title_type"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/gray"
        android:textSize="20dp"></TextView>
    <EditText
        android:id="@+id/edittext_type"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ123456789"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:background="@drawable/background_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
    </EditText>
    <TextView
        android:id="@+id/text_actors"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="10dp"
        android:text="@string/title_actors"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/gray"
        android:textSize="20dp"></TextView>
    <EditText
        android:id="@+id/edittext_actors"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ123456789"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:background="@drawable/background_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
    </EditText>
    <TextView
        android:id="@+id/text_plot"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="10dp"
        android:text="@string/title_plot"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/gray"
        android:textSize="20dp"></TextView>
    <EditText
        android:id="@+id/edittext_plot"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ123456789"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:background="@drawable/background_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
    </EditText>
    <Button
        android:id="@+id/button_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:onClick="delAllItems"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="18dp"
        android:textColor="@color/blue"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:background="@drawable/background_view"
        android:text="@string/save"></Button>
</LinearLayout>